--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   text-align: center;
   min-height: 100vh;
+  background-image: linear-gradient(to right, #ff5200 , #035aa6);
 }
 
 .app-container {
